tests/functional2/lang/attrs/parse-fail-duplicate-3.err.exp
error: attribute 'x' already defined at /pwd/in.nix:7:5
       at /pwd/in.nix:8:18:
            7|     x = 789;
            8|     inherit (as) x;
             |                  ^
            9|   };
